<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/blue">

    <ImageView
        android:id="@+id/ivCircle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/circle"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="20dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:gravity="top"
        android:text="@string/welcome_to"
        android:textAppearance="@style/welcome_to"
        android:textColor="@color/light_black"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="68dp"
        tools:layout_editor_absoluteY="20dp"
        tools:ignore="MissingConstraints"
         />

    <TextView
        android:id="@+id/tvSample"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:text="@string/sample_rest"
        android:textAppearance="@style/sample_rest"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome"
        tools:layout_editor_absoluteX="68dp"
        tools:ignore="MissingConstraints"
        />

    <Button
        android:id="@+id/btnVector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        style="@style/Widget.MaterialComponents.TimePicker.Button"
        android:backgroundTint="@color/material_dynamic_neutral90"/>

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/vectorimg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />


    <ImageView
        android:layout_width="5dp"
        android:layout_height="25dp"
        android:background="@drawable/thin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="22dp"
        android:background="@drawable/vector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.828"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <ImageView
        android:id="@+id/ivSpecial_dis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sd"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="96dp"
        app:layout_constraintTop_toBottomOf="@+id/tvSample"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="378dp"
        android:layout_height="125dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="200dp">

        <!--Bottom Layout-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="108dp"
            android:layout_height="72dp"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/ivstore"
                android:layout_width="108dp"
                android:layout_height="72dp"
                android:background="@drawable/sp"
                tools:layout_editor_absoluteX="26dp"
                tools:layout_editor_absoluteY="16dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvStore_pickup"
            android:layout_width="132dp"
            android:layout_height="20dp"
            android:layout_marginVertical="85dp"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:hint="@string/store_pickup"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/best"
            android:layout_width="132dp"
            android:layout_height="24dp"
            android:layout_marginVertical="100dp"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:hint="@string/label"
            android:textColor="@color/grey"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/delivery"
            android:layout_width="108dp"
            android:layout_height="65dp"
            android:layout_marginStart="240dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="28dp"
            android:background="@drawable/delivery" />

        <TextView
            android:id="@+id/tvdeli_very"
            android:layout_width="132dp"
            android:layout_height="20dp"
            android:layout_marginVertical="85dp"
            android:layout_marginStart="230dp"
            android:gravity="center"
            android:hint="@string/data"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAlways"
            android:layout_width="132dp"
            android:layout_height="24dp"
            android:layout_marginVertical="100dp"
            android:layout_marginStart="230dp"
            android:gravity="center"
            android:hint="@string/always"
            android:textColor="@color/grey"
            android:textSize="12sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_online"
        android:layout_width="378dp"
        android:layout_height="130dp"
        app:cardBackgroundColor="@color/white"
        tools:ignore="MissingConstraints"
        app:cardCornerRadius="10dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="332dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvonline"
                android:layout_width="180dp"
                android:layout_height="24dp"
                android:layout_marginVertical="10dp"
                android:gravity="left"
                android:hint="@string/online"
                android:paddingStart="4dp"
                android:textColor="@color/light_black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="25dp" />


            <TextView
                android:id="@+id/tvtable"
                android:layout_width="180dp"
                android:layout_height="18dp"
                android:layout_marginVertical="16dp"
                android:gravity="left"
                android:hint="@string/table"
                android:paddingStart="4dp"
                android:textColor="@color/light_black"
                android:textSize="12sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="48dp" />

            <Button
                style="@style/Widget.MaterialComponents.TimePicker.Button"
                android:layout_width="180dp"
                android:layout_height="31dp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="77dp" />

            <TextView
                android:id="@+id/tvReserve"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/reserve"
                android:drawablePadding="16dp"
                android:hint="@string/reserve"
                android:textColorHint="@color/blue"
                android:textSize="14sp"
                tools:layout_editor_absoluteX="35dp"
                tools:layout_editor_absoluteY="82dp" />

            <ImageView
                android:id="@+id/ivReservation"
                android:layout_width="108dp"
                android:layout_height="65dp"
                android:background="@drawable/reservation"
                tools:layout_editor_absoluteX="232dp"
                tools:layout_editor_absoluteY="5dp" />

            <Button
                android:id="@+id/btnReserve"
                style="@style/Widget.MaterialComponents.TimePicker.Button"
                android:layout_width="130dp"
                android:layout_height="31dp"
                tools:layout_editor_absoluteX="221dp"
                tools:layout_editor_absoluteY="77dp" />

            <TextView
                android:layout_width="131dp"
                android:layout_height="21dp"
                android:hint="@string/my_reserve"
                android:textColor="@color/blue"
                android:textColorHint="@color/blue"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.935"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.743" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


    <!--Bottom Layout-->

    <TextView
        android:id="@+id/tvPromotion"
        android:layout_width="328dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:hint="@string/title"
        android:paddingStart="4dp"
        android:textColor="@color/light_black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardview_online"
        app:layout_constraintVertical_bias="0.057" />



    <ImageView
        android:id="@+id/ivExcelsa"
        android:layout_width="145dp"
        android:layout_height="84dp"
        android:background="@drawable/excelsa"
        android:paddingStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.874" />

    <TextView
        android:id="@+id/tvdiscount"
        android:layout_width="135dp"
        android:layout_height="35dp"
        android:layout_marginBottom="36dp"
        android:hint="@string/discount"
        android:paddingTop="3dp"
        android:paddingStart="4dp"
        android:textColor="@color/light_black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="135dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:hint="@string/date"
        android:paddingStart="4dp"
        android:paddingTop="2dp"
        android:textColor="@color/grey"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivExcelsa"
        app:layout_constraintVertical_bias="0.648" />

    <ImageView
        android:id="@+id/ivLiberica"
        android:layout_width="145dp"
        android:layout_height="84dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/liberica"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvliberica"
        android:layout_width="135dp"
        android:layout_height="35dp"
        android:layout_marginBottom="36dp"
        android:hint="@string/liberca"
        android:paddingStart="4dp"
        android:paddingTop="3dp"
        android:textColor="@color/light_black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.858"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="130dp"
        android:layout_height="19dp"
        android:layout_marginTop="12dp"
        android:hint="@string/date"
        android:paddingStart="4dp"
        android:paddingTop="2dp"
        android:textColor="@color/grey"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.843"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivExcelsa"
        app:layout_constraintVertical_bias="0.619" />

    <!--    <ImageView-->
<!--        android:id="@+id/ivLarge"-->
<!--        android:layout_width="135dp"-->
<!--        android:layout_height="84dp"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        android:background="@drawable/large"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.478"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->


</androidx.constraintlayout.widget.ConstraintLayout>